PR Review comments adopted from airtribe